--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_colorpicker: ^1.0.3
+  simple_animations: ^5.0.0+3
+  google_fonts: ^4.0.3
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/my_dog.jpeg
+    - assets/tb_image/
 
 
     # An image asset can refer to one or more resolution-specific "variants", see
